@@ -99,6 +99,7 @@
 				</div>
 			</div>
 		</div>
+		<canvas style="display: none; position: absolute" id="cell_popup" width="400" height="200"></canvas>
 		<canvas style="display: none" id="text_buffer" width="1000" height="1000"></canvas>
 		
 		<div>
